# TimetableGenerator

./: CMakeLists.txt  GeneratorTimetable.cpp  GeneratorTimetableORTool.cpp  README.md  Save Timetable.csv  datamodel.h  loadsimple2.txt  loadtableinfo.txt  main.cpp  timetable.cpp  timetable.h  timetable.ui
